<resources>
    <string name="app_name">Mobile Actors Agency</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>

    <string name="login_mail">E-mail</string>
    <string name="password">Password</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Don t have an account? Sing up</string>
    <string name="btn_link_to_login">Already registered. Login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="exit">Exit</string>
    <string name="prof">Profile</string>

    <string name="cng_pass">Change password</string>
    <string name="cng_mail">Change e-mail</string>
    <string name="delete_acc">Delete account</string>
    <string name="back_out">Back</string>
    <string name="accept">Accept</string>

    <string name="name">Entry You name</string>
    <string name="surname">Entry You surname</string>
    <string name="last_name">Entry You last name</string>
    <string name="mdy">Dd-Mm-Year</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

</resources>
